--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Matt Burseth's Website</title>
+	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
-	<main>
+	<div id="intro-info">
 		<h1>Matt Burseth</h1>
+	</div>
+	<main>
+	<div id="intro">
+		<h2>A little about me:</h2>
+		<div id="intro-list">
+		<ul>
+			<li>I am <span style="color:red">21</span> years old.</li>
+			<li>I enjoy programming and listening to music.</li>
+			<li>I need to get better at HTML.</li>
+		</ul>
+		</div>
+	</div>
+	<div id="intro-paragraph">
+		<p>My name is Matthew Burseth and I am currently studying <span style="color:green">Computer Science</span>.
+		This website is something I am trying to create both for myself and to hopefully showcase projects to come 
+		for others. 
+		</p>
+	</div>
 	</main>
 </body>
 </html>
