--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</ul>
 		</div>
 	</div>
-	<div id="intro-paragraph">
+	<div class="intro-paragraph">
 		<p>My name is Matthew Burseth and I am currently studying <span style="color:green">Computer Science</span>.
 		This website is something I am trying to create both for myself and to hopefully showcase projects to come 
 		for others. 
