--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 		</ul>
 		</div>
 	</div>
-	<div class="intro-paragraph">
-		<p>My name is Matthew Burseth and I am currently studying <span style="color:green">Computer Science</span>.
+	<div class="intro-div">
+		<p class="intro-paragraph">My name is Matthew Burseth and I am currently studying <span style="color:green">Computer Science</span>.
 		This website is something I am trying to create both for myself and to hopefully showcase projects to come 
 		for others. 
 		</p>
