--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div id="intro-info">
+	<div id="name-intro">
 		<h1>Matt Burseth</h1>
 	</div>
 	<main>
