--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta charset="UTF-8">
 	<title>Matt Burseth's Website</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 	<div id="name-intro">
