--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div id="name-intro">
 		<h1>Matt Burseth</h1>
 		
-		<p id="contact-info"><img src="phone.png"/>1-(224)-388-5554 mattburseth1@gmail.com</p>
+		<p id="contact-info"><img src="phone.svg"/>1-(224)-388-5554 mattburseth1@gmail.com</p>
 	</div>
 	<main>
 	<div id="intro">
