--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div id="name-intro">
 		<h1>Matt Burseth</h1>
 		
-		<p id="contact-info"><img src="smartphone.svg"/>1-(224)-388-5554 <img src="mail.svg"/>mattburseth1@gmail.com</p>
+		<p id="contact-info"><img src="smartphone.svg" width="20" height="20"/>1-(224)-388-5554 <img src="mail.svg" width="20" height="20"/>mattburseth1@gmail.com</p>
 	</div>
 	<main>
 	<div id="intro">
