--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 	</div>
 	<div class="intro-div">
 		<p class="intro-paragraph">My name is Matthew Burseth and I am currently studying <span style="color:green">Computer Science</span> at the <span style="color:purple">University of Wisconsin - Whitewater</span>.
-		This website is something I am trying to create both for myself and to hopefully showcase projects to come 
-		for others. 
+		This website is something I am creating in order to display my programming portfolio and share my contact info as needed.
 		</p>
 	</div>
 
