--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</div>
 
 	<div id="js-test">
-		<input type="button" onclick="updateAge()" value="Print Age">
+		<input type="button" onclick="printAge()" value="Print Age">
 	</div>
 	</main>
 </body>
