--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div id="name-intro">
 		<h1>Matt Burseth</h1>
 		
-		<p id="contact-info"><img src="smartphone.svg" width="20" height="20"/>  1-(224)-388-5554 <br><img src="mail.svg" width="20" height="20"/>  mattburseth1@gmail.com</p>
+		<p id="contact-info"><img src="styles/smartphone.svg" width="20" height="20"/>  1-(224)-388-5554 <br><img src="styles/mail.svg" width="20" height="20"/>  mattburseth1@gmail.com</p>
 	</div>
 	<main>
 	<div id="intro">
@@ -35,7 +35,8 @@
 	</div>
 
 	<div id="js-test">
-		<input type="button" onclick="printAge()" value="Print Age">
+		<input type="button" class="nav-button" onclick="newTab()" value="LinkedIn">
+		<input type="button" class="nav-button" onclick="changePage()" value="About Me">
 	</div>
 	</main>
 </body>
