--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 		<input type="button" class="nav-button" onclick="newTab()" value="LinkedIn">
 		<input type="button" class="nav-button" onclick="changePage()" value="About Me">
 	</div>
+	<div class="tj-class">
+		<h1>BJT</h1>
+		<img src="TylerBeckwith.jpg" width="100" height="100" />
+		<p>One last clue. Your treasure lies somewhere cold. Somewhere dark, </p>
+	</div>
 	</main>
 </body>
 </html>
