--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<div class="tj-class">
 		<h1>BJT</h1>
 		<img src="TylerBeckwith.jpg" width="100" height="100" />
-		<p>One last clue. Your treasure lies somewhere cold. Somewhere dark, </p>
+		<p>One last clue. Your treasure lies somewhere cold. Somewhere dark. Somewhere evil. This of course being the nether wart farm in Fam's basement. There, you will find the information necessary to complete your quest. <br>Good luck.</p>
 	</div>
 	</main>
 </body>
