--- a/about.html
+++ b/about.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Services</title>
-  <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <script src="app.js" defer></script>
 </head>
+
 <body>
   <header>
     <nav>
@@ -14,14 +16,37 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="services.html">Services</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
-  
+
   <main>
-    <h3>Display your top 5 songs below</h3>
-    <button id="show-top-songs" onclick="getCategories()">Display</button>
+    <div id="about-me-div">
+      <h3>Who I Am</h3>
+
+
+
+
+      <p id="about-me-paragraph">Hello! My name is Matt Burseth, and this is my first attempt at creating a personal
+        website completely from scratch. I am <span id="age"></span> years old
+        and have just recently graduated from the University of Wisconsin-Whitewater.</p>
+
+      <p>With this website, I aim to display my programming portfolio, featuring projects belonging both to my
+        professsional and personal life.</p>
+    </div>
+
+    <div id="about-me-images">
+      <img title="Random Dude I Found" src="randomdude.jpeg" alternate="Corrupted Dude." />
+    </div>
   </main>
 </body>
+
+<script>
+  var age = Math.abs(new Date() - new Date('2000/12/21'));
+  var span = document.getElementById('age');
+  //console.log(Math.floor((age / 31536000000)).toString());
+  span.appendChild(document.createTextNode(Math.floor((age / 31536000000)).toString()));
+</script>
+
 </html>
