--- a/services.html
+++ b/services.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Services</title>
-  <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <script src="app.js" defer></script>
 </head>
+
 <body>
   <header>
     <nav>
@@ -14,15 +16,16 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
-  
+
   <main>
-    <h1>Our Services</h1>
+    <h1>Login with Spotify to Enable API Usage</h1>
     <p id="promptToken">Click the button below to log in to Spotify:</p>
     <button id="login-button" onclick="loginToSpotify()">Log in with Spotify</button>
   </main>
 </body>
+
 </html>
