Updated random dude reference

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     </div>
 
     <div id="about-me-images">
-      <img title="Random Dude I Found" src="randomdude.jpeg" alternate="Corrupted Dude." />
+      <img title="Random Dude I Found" src="styles/randomdude.jpeg" alternate="Corrupted Dude." />
     </div>
   </main>
 </body>
