Fixed track fetch

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             type="button"
             id="show-top-songs"
             class="display-button"
-            onclick="showTopSongs()"
+            onclick="searchForSong('superstitious')"
           >
             Display Top Songs
           </button>
