--- a/index.html
+++ b/index.html
@@ -55,13 +55,12 @@
             >
           </p>
         </div>
-
         <div id="top-songs">
           <button
             type="button"
             id="show-top-songs"
             class="display-button"
-            onclick="searchForSong('superstitious')"
+            onclick="printArtistSearch()"
           >
             Display Top Songs
           </button>
