Fix Access Code!

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
       <div id="main-body-div">
         <section>
-          <h1 class="center" style="width: 75%">Welcome to My Website!</h1>
+          <h1 class="center" style="width: 80%">Welcome to My Website!</h1>
           <p style="margin-bottom: 45px">Testing work with API's.</p>
         </section>
 
@@ -31,7 +31,7 @@
           <!-- <span id="successSpan"
             ><p id="hasToken">This should change if we have a token.</p></span
           > -->
-
+          <p>Search for a music artist!</p>
           <input
             type="text"
             placeholder="&#128270"
@@ -62,11 +62,13 @@
             class="display-button"
             onclick="printArtistSearch()"
           >
-            Display Top Songs
+            Search for Artist
           </button>
           <p id="top-songs-API-return">
             Top Songs: <span id="top-songs-replace">No info yet...</span>
           </p>
+
+          <!-- <img src="https://i.scdn.co/image/ab6761610000e5eb6c6380e782ed89db8754cf2a" class="artist-photo"> -->
 
           <!-- <audio controls>
                 <source src="https://p.scdn.co/mp3-preview/c85bc2fe71a4e2e002376c04b771cbb6be6438e6?cid=b7a28fe4fa8e4a13846d6dd5579fd5f9" />
