--- a/services.html
+++ b/services.html
@@ -23,7 +23,7 @@
     <main>
       <h1>Login with Spotify to Enable API Usage</h1>
       <p id="promptToken">Click the button below to log in to Spotify:</p>
-      <button id="login-button" onclick="loginToSpotifyAccessCode()">
+      <button id="login-button" onclick="callNode()">
         Log in with Spotify
       </button>
     </main>
