--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             type="text"
             placeholder="&#128270"
             title="Number of Songs"
-            id="number-of-display-songs"
+            id="artist-search-bar"
             label="How many songs?"
           />
         </div>
