created error message

--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
           >
             Search for Artist
           </button>
-          <p id="top-songs-API-return">
-            Top Songs: <span id="top-songs-replace">No info yet...</span>
+          <p id="search-error">
+            <!-- Top Songs: <span id="top-songs-replace">No info yet...</span> -->
+            
           </p>
 
           <!-- <img src="https://i.scdn.co/image/ab6761610000e5eb6c6380e782ed89db8754cf2a" class="artist-photo"> -->
