--- a/services.html
+++ b/services.html
@@ -26,6 +26,45 @@
       <button id="login-button" onclick="loginToSpotifyAccessCode()">
         Log in with Spotify
       </button>
+
+      <form action="http://localhost:8443/login" method="post">
+        <div class="sign-in-container">
+          <label for="email"><b>Email Address</b></label>
+          <input
+            type="email"
+            placeholder="ex@ample.com"
+            name="email"
+            required
+          />
+
+          <label for="username"><b>Username</b></label>
+          <input
+            type="text"
+            placeholder="Enter Username"
+            name="username"
+            required
+          />
+
+          <label for="password"><b>Password</b></label>
+          <input
+            type="password"
+            placeholder="Enter Password"
+            name="password"
+            required
+          />
+
+          <button type="submit">Login</button>
+          <label>
+            <input type="checkbox" checked="checked" name="remember" /> Remember
+            me
+          </label>
+        </div>
+
+        <div class="container" style="background-color: #f1f1f1">
+          <button type="button" class="cancelbtn">Cancel</button>
+          <span class="psw">Forgot <a href="#">password?</a></span>
+        </div>
+      </form>
     </main>
   </body>
 </html>
