Added DB user function

--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
           >
             Search for Artist
           </button>
+
+          <button
+            type="button"
+            id="new-db-user"
+            class="display-button"
+            onclick="addDBUser()"
+          >
+            Add user to DB
+          </button>
           <p id="search-error">
             <!-- Top Songs: <span id="top-songs-replace">No info yet...</span> -->
             
