--- a/index.html
+++ b/index.html
@@ -10,14 +10,23 @@
 
   <body>
     <header>
-      <nav>
-        <ul class="menu-buttons">
-          <li><a href="#">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+      <div id="heading-menu-div">
+        <nav>
+          <ul class="menu-buttons">
+            <li><a href="#">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+
+        <div class="page-login-button-div">
+          <button type="button" class="page-login-button">
+            Login
+          </button>
+        </div>
+      </div>
+      
     </header>
 
     <main>
