--- a/signup.html
+++ b/signup.html
@@ -11,12 +11,7 @@
   <body>
     <main>
       <div id="login-container">
-        <form
-          id="login-form"
-          style="display: block"
-          action="http://localhost:8443/signup"
-          method="POST"
-        >
+        <form id="login-form" style="display: block" action="" method="POST">
           <div class="sign-in-container">
             <label for="email"><b>Email Address</b></label>
             <input
