fixed sign up and login

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
             document.getElementById('page-signup-button').onclick = function() {
               location.href = 'signup.html';
             }
+
+            document.getElementById('page-login-button').onclick = function() {
+              location.href = 'login.html';
+            }
           </script>
         </div>
       </div>
