--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign up</title>
+    <title>Login</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
     <script src="./signup.js" type="module" defer></script>
   </head>
@@ -11,37 +11,13 @@
   <body>
     <main>
       <div id="login-container">
-        <form id="signup-form" style="display: block" action="" method="POST">
+        <form id="login-form" style="display: block" action="" method="GET">
           <div class="sign-in-container">
-            <label for="email"><b>Email Address</b></label>
-            <input
-              type="email"
-              placeholder="ex@ample.com"
-              name="email"
-              required
-            />
-
-            <label for="firstname"><b>First Name</b></label>
+            <label for="userlogin"><b>Username/Email</b></label>
             <input
               type="text"
-              placeholder="Enter Name"
-              name="firstname"
-              required
-            />
-
-            <label for="lastname"><b>Last Name</b></label>
-            <input
-              type="text"
-              placeholder="Enter Name"
-              name="lastname"
-              required
-            />
-
-            <label for="username"><b>Username</b></label>
-            <input
-              type="text"
-              placeholder="Enter Username"
-              name="username"
+              placeholder="Enter value"
+              name="userlogin"
               required
             />
 
@@ -53,11 +29,7 @@
               required
             />
 
-            <button type="submit">Sign up</button>
-            <label>
-              <input type="checkbox" checked="checked" name="remember" />
-              Remember me
-            </label>
+            <button type="submit">Login</button>
           </div>
 
           <div class="container" style="background-color: #f1f1f1">
@@ -75,7 +47,7 @@
         </form>
       </div>
 
-      <p id="signup-error"></p>
+      <p id="login-error"></p>
     </main>
   </body>
 </html>
