Completed login and signup

--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
 
   <body>
     <main>
+      <h2 class="page-header"><b>Login</b></h2>
       <div id="login-container">
         <form id="login-form" style="display: block" action="" method="GET">
           <div class="sign-in-container">
@@ -47,7 +48,7 @@
         </form>
       </div>
 
-      <p id="login-error"></p>
+      <p class="log-sign-error" id="login-error"></p>
     </main>
   </body>
 </html>
