--- a/signup.html
+++ b/signup.html
@@ -10,6 +10,7 @@
 
   <body>
     <main>
+      <h2 class="page-header"><b>Sign up</b></h2>
       <div id="login-container">
         <form id="signup-form" style="display: block" action="" method="POST">
           <div class="sign-in-container">
@@ -75,7 +76,7 @@
         </form>
       </div>
 
-      <p id="signup-error"></p>
+      <p class="log-sign-error" id="signup-error"></p>
     </main>
   </body>
 </html>
