--- a/index.html
+++ b/index.html
@@ -27,8 +27,16 @@
         </section>
 
         <div class = "info-div full-width reg-div flex-center" id="about-me-div">
-          <div class="three-quarters flex-center">
+          <div id="about-me-card" class="three-quarters flex-center">
+            <div class="about-me-tab" id="about-me-img-container" style="width: 50%;">
+              <img src="" alt="Photo of Matt" />
+            </div>
+            
 
+            <div class="about-me-tab" id="about-me-information" style="width: 50%;">
+              <h2>Hi, I'm Matt!</h2>
+              <p>Welcome to my web portfolio! This website was made entirely from scratch using HTML/CSS, Javascript, NodeJS/Express and PostgreSQL.</p>
+            </div>
           </div>
         </div>
 
