--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         <div class = "info-div full-width reg-div flex-center" id="about-me-div">
           <div id="about-me-card" class="three-quarters flex-center">
             <div class="about-me-tab" id="about-me-img-container" style="width: 50%;">
-              <img src="" alt="Photo of Matt" />
+              <img src="./styles/photo-of-me.jpg" alt="Photo of Matt" style="width: 188px; height: 250px; box-shadow: 5px 5px 5px black;"/>
             </div>
             
 
             <div class="about-me-tab" id="about-me-information" style="width: 50%;">
-              <h2>Hi, I'm Matt!</h2>
+              <h2 style="margin-bottom: 3rem;">Hi, I'm Matt!</h2>
               <p>Welcome to my web portfolio! This website was made entirely from scratch using HTML/CSS, Javascript, NodeJS/Express and PostgreSQL.</p>
             </div>
           </div>
