--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <nav>
         <ul class="menu-buttons">
           <li><a href="#">home</a></li>
-          <li><a href="about.html">about</a></li>
+          <li><a href="about.html">about me</a></li>
           <li><a href="services.html">services</a></li>
           <li><a href="contact.html">contact</a></li>
         </ul>
@@ -22,45 +22,87 @@
 
     <main>
       <div id="main-body-div">
-        <section>
-          <h1 class="center" style="width: 80%">welcome to my portfolio.</h1>
-        </section>
+        <div class="info-div background-image-hallway">
+          <section>
+            <!-- <h1 class="center" style="width: 80%; padding-top: 40px;">welcome to my portfolio.</h1> -->
+          </section>
 
-        <div class = "info-div full-width reg-div flex-center" id="about-me-div">
-          <div id="about-me-card" class="three-quarters flex-center">
-            <div class="about-me-tab" id="about-me-img-container" style="width: 50%;">
-              <img src="./styles/photo-of-me.jpg" alt="Photo of Matt" style="width: 188px; height: 250px; box-shadow: 5px 5px 5px black;"/>
-            </div>
-            
+          <div
+            class="info-div full-width reg-div flex-center"
+            id="about-me-div"
+          >
+            <div id="about-me-card" class="three-quarters flex-center">
+              <div
+                class="about-me-tab"
+                id="about-me-img-container"
+                style="width: 50%"
+              >
+                <img
+                  src="./styles/photo-of-me.jpg"
+                  alt="Photo of Matt"
+                  style="
+                    width: 187px;
+                    height: 248px;
+                    box-shadow: 5px 5px 5px black;
+                  "
+                />
+                <p>(Me)</p>
+              </div>
 
-            <div class="about-me-tab" id="about-me-information" style="width: 50%;">
-              <h2 style="margin-bottom: 3rem;">Hi, I'm Matt!</h2>
-              <p>Welcome to my web portfolio! This website was made entirely from scratch using HTML/CSS, Javascript, NodeJS/Express and PostgreSQL.</p>
+              <div
+                class="about-me-tab"
+                id="about-me-information"
+                style="width: 50%"
+              >
+                <h2 style="margin-bottom: 2rem">Hi, I'm Matt!</h2>
+                <p>
+                  Welcome to my web portfolio! This website was made entirely
+                  from scratch using HTML/CSS, Javascript, NodeJS/Express and
+                  PostgreSQL.
+                </p>
+              </div>
             </div>
           </div>
         </div>
 
-        <div class = "info-div full-width reg-div flex-center" id="test-div">
-          <div class="three-quarters flex-center">
-
-          </div>
+        <div class="info-div full-width reg-div flex-center" id="test-div">
+          <div class="three-quarters flex-center"></div>
         </div>
 
-        <div class="info-div full-width reg-div flex-center" id="technologies-div">
+        <div
+          class="info-div full-width reg-div flex-center"
+          id="technologies-div"
+        >
           <div class="three-quarters flex-center space-evenly">
             <div class="technologies-tab">
-              <img src="./styles/java-logo.png" alt="Java logo" style="width: 75px; height: 75px;"/>
+              <img
+                src="./styles/java-logo.png"
+                alt="Java logo"
+                style="width: 75px; height: 75px"
+              />
               <p>Backend Java experience via Springboot and Maven builds</p>
             </div>
             <div class="technologies-tab">
-              <img src="./styles/node-js-logo.png" alt="React logo" style="width: 75px; height: 75px;"/>
-              <p>Further backend experience via NodeJS and popular dependencies such as Express</p>
+              <img
+                src="./styles/node-js-logo.png"
+                alt="React logo"
+                style="width: 75px; height: 75px"
+              />
+              <p>
+                Further backend experience via NodeJS and popular dependencies
+                such as Express
+              </p>
             </div>
             <div class="technologies-tab">
-              <img src="./styles/react-logo.png" alt="React logo" style="width: 75px; height: 75px;"/>
-              <p>Personal website created with ReactJS using dynamic elements</p>
+              <img
+                src="./styles/react-logo.png"
+                alt="React logo"
+                style="width: 75px; height: 75px"
+              />
+              <p>
+                Personal website created with ReactJS using dynamic elements
+              </p>
             </div>
-            
           </div>
         </div>
       </div>
