background image update
overlayed text on the background image for centering purposes - relocated about me information to dark background div, need to update about me card to not look terrible

--- a/index.html
+++ b/index.html
@@ -9,28 +9,23 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <ul class="menu-buttons">
-          <li><a href="#">home</a></li>
-          <li><a href="about.html">about me</a></li>
-          <li><a href="services.html">services</a></li>
-          <li><a href="contact.html">contact</a></li>
-        </ul>
-      </nav>
-    </header>
+    <div class="info-div background-image-hallway">
+      <header>
+        <nav>
+          <ul class="menu-buttons">
+            <li><a href="#">home</a></li>
+            <li><a href="about.html">about me</a></li>
+            <li><a href="services.html">playground</a></li>
+            <li><a href="contact.html">contact</a></li>
+          </ul>
+        </nav>
+      </header>
+    </div>
 
     <main>
       <div id="main-body-div">
-        <div class="info-div background-image-hallway">
-          <section>
-            <!-- <h1 class="center" style="width: 80%; padding-top: 40px;">welcome to my portfolio.</h1> -->
-          </section>
-
-          <div
-            class="info-div full-width reg-div flex-center"
-            id="about-me-div"
-          >
+        <div class="info-div full-width reg-div flex-center" id="test-div">
+          <div class="full-width reg-div flex-center" id="about-me-div">
             <div id="about-me-card" class="three-quarters flex-center">
               <div
                 class="about-me-tab"
@@ -44,6 +39,7 @@
                     width: 187px;
                     height: 248px;
                     box-shadow: 5px 5px 5px black;
+                    border-radius: 5px;
                   "
                 />
                 <p>(Me)</p>
@@ -60,13 +56,10 @@
                   from scratch using HTML/CSS, Javascript, NodeJS/Express and
                   PostgreSQL.
                 </p>
+                <a href="about.html" style="margin-top: 2rem">More about me</a>
               </div>
             </div>
           </div>
-        </div>
-
-        <div class="info-div full-width reg-div flex-center" id="test-div">
-          <div class="three-quarters flex-center"></div>
         </div>
 
         <div
