--- a/about.html
+++ b/about.html
@@ -13,10 +13,10 @@
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="index.html">home</a></li>
+        <li><a href="#">about</a></li>
+        <li><a href="services.html">playground</a></li>
+        <li><a href="contact.html">contact</a></li>
       </ul>
     </nav>
   </header>
