--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">home</a></li>
+                <li><a href="about.html">about</a></li>
+                <li><a href="services.html">playground</a></li>
+                <li><a href="#">contact</a></li>
             </ul>
         </nav>
     </header>
