--- a/services.html
+++ b/services.html
@@ -13,10 +13,10 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="index.html">home</a></li>
+          <li><a href="about.html">about</a></li>
+          <li><a href="#">playground</a></li>
+          <li><a href="contact.html">contact</a></li>
         </ul>
       </nav>
     </header>
